crates/ty_python_semantic/resources/mdtest/snapshots/Comparison___Membersh…_-_membership_test.md_-_Return_type_that_doe…_(7dd8e565e9d0215).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: Comparison: Membership Test - membership_test.md - Return type that doesn't implement `__bool__` correctly
mdtest path: crates/ty_python_semantic/resources/mdtest/comparison/instances/membership_test.md
---

# Python source files

## mdtest_snippet.py

```
 1 | class NotBoolable:
 2 |     __bool__: int = 3
 3 | 
 4 | class WithContains:
 5 |     def __contains__(self, item) -> NotBoolable:
 6 |         return NotBoolable()
 7 | 
 8 | # error: [unsupported-bool-conversion]
 9 | 10 in WithContains()
10 | # error: [unsupported-bool-conversion]
11 | 10 not in WithContains()
```

# Diagnostics

```
error[unsupported-bool-conversion]: Boolean conversion is unsupported for type `NotBoolable`
  --> src/mdtest_snippet.py:9:1
   |
 8 | # error: [unsupported-bool-conversion]
 9 | 10 in WithContains()
   | ^^^^^^^^^^^^^^^^^^^^
10 | # error: [unsupported-bool-conversion]
11 | 10 not in WithContains()
   |
info: `__bool__` on `NotBoolable` must be callable
info: rule `unsupported-bool-conversion` is enabled by default

```

```
error[unsupported-bool-conversion]: Boolean conversion is unsupported for type `NotBoolable`
  --> src/mdtest_snippet.py:11:1
   |
 9 | 10 in WithContains()
10 | # error: [unsupported-bool-conversion]
11 | 10 not in WithContains()
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
info: `__bool__` on `NotBoolable` must be callable
info: rule `unsupported-bool-conversion` is enabled by default

```
